# softbloks

./: CMakeLists.txt  README.md
cmake/: CMakeLists.txt
doc/: CMakeLists.txt  softbloks.doxyfile.in
examples/: CMakeLists.txt
examples/helloworld/: CMakeLists.txt  hellobloks.cpp  hellosoft.cpp  helloworld.cpp
share/cmake/: CMakeLists.txt  config-version.cmake.in  softbloks-config.cmake
share/doc/: CMakeLists.txt  softbloks.doxyfile.in
share/examples/: CMakeLists.txt
share/examples/helloworld/: CMakeLists.txt  hellobloks.cpp  hellosoft.cpp
src/: CMakeLists.txt
src/cmake/: CMakeLists.txt  config-version.cmake.in  softbloks-config.cmake
src/doxygen/: CMakeLists.txt  softbloks.doxyfile.in
src/sb-core/: CMakeLists.txt  sb-abstractblok-private.h  sb-abstractblok.cpp  sb-abstractblok.h  sb-abstractdata-private.h  sb-abstractdata.cpp  sb-abstractdata.h  sb-abstractexecutive-private.h  sb-abstractexecutive.cpp  sb-abstractexecutive.h  sb-abstractfilter-private.h  sb-abstractfilter.cpp  sb-abstractfilter.h  sb-abstractobject-private.h  sb-abstractobject.cpp  sb-abstractobject.h  sb-abstractsink-private.h  sb-abstractsink.cpp  sb-abstractsink.h  sb-abstractsoft-private.h  sb-abstractsoft.cpp  sb-abstractsoft.h  sb-abstractsource-private.h  sb-abstractsource.cpp  sb-abstractsource.h  sb-blokformat.h  sb-core.h  sb-coredefine.h  sb-data.h  sb-dataset-private.h  sb-dataset.cpp  sb-dataset.h  sb-executive-private.h  sb-executive.cpp  sb-executive.h  sb-objectformat.h  sb-property.h  sb-propertyformat.h
src/sb-global/: CMakeLists.txt  sb-any.h  sb-bitmask.h  sb-global.h  sb-global.h.in  sb-globaldefine.h  sb-meta.h  sb-property.h  sb-type_traits.h  sb-utility.h  sb-version.h.in
src/softrun/: CMakeLists.txt  sr-directory-private.h  sr-directory.cpp  sr-directory.h  sr-library-private.h  sr-library.cpp  sr-library.h  sr-main.cpp
src/software/: CMakeLists.txt  sw-application-private.h  sw-application.cpp  sw-application.h  sw-define.h  sw-main.cpp  sw-mainwidget-private.h  sw-mainwidget.cpp  sw-mainwidget.h  sw-resources.qrc
src/testing/: CMakeLists.txt  sb-abstractobject-test.h  sb-core-test.cpp  sb-coredefine-test.h  sb-fixtures.h  sb-objectformat-test.h  sb-propertyformat-test.h  sb-static_move_cast-test.h  sb-static_pointer_cast-test.h
tests/: CMakeLists.txt
